tests/paczka1/fuzzy1/16081339.err
Error in line 3: w6B S*37 86,8
Error in line 7: AJe S437 93,9
Error in line 10: CTeP S437 138,6
Error in line 13: CTeP A378 89,9
Error in line 12: LpQ67x7X A378 35,9
Error in line 20: LpQ67x7X A378 75,6
Error in line 31: w6B A378 14,4
Error in line 39: AJe A378 99,62
